--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class = "canvas-box">
                 <div class = "menu-box">
                     <ul>
-                        <li><a href="###" class="works" id="works">Works</a></li>
+                        <li><a href="works.html" class="works" id="works">Works</a></li>
                         <li><a href="###" class="about" id="about">About us</a></li>
                         <li><a href="###" class="contact" id="contact">Contact</a></li>
                     </ul>
